# project-omok

./: .dockerignore  .gitignore  Dockerfile  daphne.service  deploy_dev.sh  docker-compose.yml  pyproject.toml  requirements.txt
.config/: gunicorn.py  omok.nginx  supervisord.conf
.config/dev/: omok.nginx  supervisord.conf
.config/prod/: gunicorn.py  supervisord.conf
.github/workflows/: aws.yml
app/chat/: routing.py  tests.py
app/config/: asgi.py  routing.py  settings.py  urls.py
app/config/settings/: __init__.py  _base.py  dev.py  prod.py
app/config/wsgi/: __init__.py
app/omok/: apps.py  consumers.py  urls.py  views.py
app/static/css/: style.css  waiting_room.css
app/templates/chat/: room.html
app/templates/omok/: data.html  game.html  index.html  waiting_room.html
