[tool.poetry]
name = "project-omok"
version = "0.1.0"
description = ""
authors = ["moorekwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
django-extensions = "^3.0.3"
channels = "^2.4.0"
psycopg2-binary = "2.7.7"
supervisor = "^4.2.0"
gunicorn = "^20.0.4"
channels_redis = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
